RESOLVED FIXED27624
WebCore/page/DragController.cpp does not conform to style standards
https://bugs.webkit.org/show_bug.cgi?id=27624
Summary WebCore/page/DragController.cpp does not conform to style standards
Mike Fenton
Reported 2009-07-23 13:51:37 PDT
cpplint reports a number of valid style fixes that should be made to WebCore/page/DragController.cpp.
Attachments
Style patch for DragController.cpp (22.26 KB, patch)
2009-07-23 13:53 PDT, Mike Fenton
eric: review+
Mike Fenton
Comment 1 2009-07-23 13:53:57 PDT
Created attachment 33367 [details] Style patch for DragController.cpp
Eric Seidel (no email)
Comment 2 2009-07-23 23:11:03 PDT
Comment on attachment 33367 [details] Style patch for DragController.cpp LGTM.
Adam Barth
Comment 3 2009-07-23 23:51:19 PDT
Will land.
Adam Barth
Comment 4 2009-07-24 00:45:05 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/page/DragController.cpp Committed r46330 M WebCore/ChangeLog M WebCore/page/DragController.cpp r46330 = 2def5eb97e3e997525f1470d8055acf4c7a7ea19 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/46330
Note You need to log in before you can comment on or make changes to this bug.